103 old question dec 2019 added

--- a/views/dca103onlineclasschapter12.ejs
+++ b/views/dca103onlineclasschapter12.ejs
@@ -197,6 +197,17 @@ referencing) (2 MARKS)
 5. Excel follows relative reference => True
 </p><p>
 6. By default all references in MS Excel are ________ reference => Relative
+</p><p>
+7. When you link data maintained in a excel workbook to a word document => 
+The word document contains a reference to the original source application
+</p><p>
+8. By default, excel provides 3 worksheets. You need only two of them, how will you delete the third one? => Right click
+on sheet tab of the third sheet and choose delete from the context menu.
+</p><p>
+9. Which of the following is not a valid data type in excel => Label <br>
+a) Character b) Date/time c) Number d) Label
+</p><p>
+10. The cell reference for cell range of G2 to M12 is => G2:M12
 </p>
 
              
