--- a/views/dca103onlineclasschapter13.ejs
+++ b/views/dca103onlineclasschapter13.ejs
@@ -258,7 +258,14 @@ shortcut menu.
 15. In excel sheet addition/ summation is done using ________ expression => All of the above <br>
 { a) =A1+A2+A3+A4 c) +A1+A2+A3+A4 b) =Sum(A1:A4) d) All of the above }
 </p><p>
-16. To keep a portion of the sheet visible while the rest of the sheet scrolls is +. Freeze
+16. To keep a portion of the sheet visible while the rest of the sheet scrolls is => Freeze
+</p><p>
+17. What will be the output if you format the cell containing 5436.8 as '#,##0.00'? => 5,436.80
+</p><p>
+18. How should you print a selected area of a worksheet, if you'll want to print a different area next time? =>
+On the office button, click print, and then click selection under print what.
+</p><p>
+19. The default header for a worksheet is => No default header
 </p>
                       </div>
                   
