--- a/views/dca103onlineclasschapter14.ejs
+++ b/views/dca103onlineclasschapter14.ejs
@@ -270,6 +270,9 @@ Cell A1=5 and B1=7) => <b>A1 is greater than B1 </b><br>
 graded passed. What is the output of the IF statement? <em>=IF(G6 > 85,"outstanding","Passed").</em> 
 Given: student X's mark Obtained is 72 => <b>Passed</b> <br>
 { a) Outstanding c) Passed b) First division d) Second division }
+</p><p>
+22. Which of the following is correct syntax in Excel? =>
+=IF(LogicalTest, TrueResult, FalseResult)
 </p>
 
              
