--- a/views/dca103onlineclasschapter15.ejs
+++ b/views/dca103onlineclasschapter15.ejs
@@ -222,6 +222,9 @@
 </p><p>
 1. _______ permits the user to change a set of data and view the
 corresponding changes to a relative set of data => What-if analysis
+</p><p>
+2. Which of the following is correct? => =power(2,3) <br>
+a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
 </p>
 
              
