--- a/views/dca103onlineclasschapter16.ejs
+++ b/views/dca103onlineclasschapter16.ejs
@@ -240,6 +240,8 @@ charts, Updating charts, changing the chart type, previewing and printing charts
 12. Multiple drawing objects are ________ to form one object => Group
 </p><p>
 13. Underlined letter in the menu bar is activated by ________ key => Alt or F10
+</p><p>
+14. To select one hyperlink after another during a slide presentation, what do you press? => Tab
 </p>
 
              
