--- a/views/dca103onlineclasschapter18.ejs
+++ b/views/dca103onlineclasschapter18.ejs
@@ -223,6 +223,8 @@ your presentation => Slide sorter view
 14. <img src="/img/slideShowFromBeginning.jpg"> represents => Start slide show from the beginning
 </p><p>
 15. ________ is used to end slide show => Esc
+</p><p>
+18. What is Custom shows in powerpoint? => Creating Presentations within a Presentation
 </p>
 
              
