--- a/views/dca103onlineclasschapter19.ejs
+++ b/views/dca103onlineclasschapter19.ejs
@@ -199,6 +199,11 @@ option available under the Background group in the Design tab.
 3. <img src="/img/slideOrientation.jpg"> represent => Slide Orientation
 </p><p>
 4. <img src="/img/slideReset.jpg"> represent => Slide reset
+</p><p>
+5. Which of the following should you use if you want all the slides in the presentation to have the same look?
+=> A presentation design template
+</p><p>
+6. What is the best way to create another copy of slide? => From New Slide button, choose duplicate selected slide.
 </p>
 
              
