--- a/views/dca103onlineclasschapter2.ejs
+++ b/views/dca103onlineclasschapter2.ejs
@@ -263,6 +263,8 @@ combination with mouse is use => Ctrl
 21. MS office word zoom range is 10 to 500.
 </p><p>
 22. In MS Word, Typing '=rand (4,2)' gives ________ => 4 paragraphs and 2 sentences of text
+</p><p>
+23. Page down key => Moves the cursor one screen down
 </p>
 
              
