--- a/views/dca103onlineclasschapter20.ejs
+++ b/views/dca103onlineclasschapter20.ejs
@@ -210,6 +210,11 @@ sound effects, Setting slide timings, Rehearse timings, Grouping and ungrouping 
 6. Slide Timing can be set for => All Slides Collectively
 </p><p>
 7. Slide timing can be set for => One slide and Group of slides
+</p><p>
+8. <img src="/img/smartArt.jpg"> represents => SmartArt (Radial Cycle under SmartArt Graphics)
+</p><p>
+9. Which option in powerpoint allows you to create a package of your presentation for showing to another
+computer? => Pack and Go
 </p>
 
              
