--- a/views/dca103onlineclasschapter4.ejs
+++ b/views/dca103onlineclasschapter4.ejs
@@ -213,8 +213,27 @@ paragraphs and lines included in the word document => Word count option
 </p><p>
 5. Redo shortcut key is => Ctrl + Y
 </p><p>
-
 6. There are ________ number of default measurement units in MS Word => 5
+</p><p>
+7. What is the term used when you press and hold the left mouse key and move the mouse around the slide?
+=> Dragging
+</p><p>
+8. To move to the end of the document, press the ________ key(s) => Ctrl + End
+</p><p>
+9. Ctrl + W => Save and close document
+</p><p>
+10. A screen element of Msword that is usually located below the title bar that provides categorized options is =>
+Menu bar
+</p><p>
+11. <img src="/img/symbolMsword.jpg"> represent => symbol
+</p><p>
+12. To insert hyperlink => Ctrl + K or Click Insert tab -> hyperlink
+</p><p>
+13. To select a group of words, ________ => Drag the mouse pointer through the characters to be selected
+</p><p>
+14. What is the use of document map? => To quickly navigate the document
+</p><p>
+15. Changin the appearance of a document is called => Formatting
 </p>
 
              
