--- a/views/dca103onlineclasschapter6.ejs
+++ b/views/dca103onlineclasschapter6.ejs
@@ -252,6 +252,8 @@ another portion of the document is => Format painter
       13. Page orientation is of ________ types => Two
       </p><p>
         14. There are two type of page orientation.
+         </p><p>
+        15. How many different positions can you set for dropcap? => 2
         
 </p>
 
