--- a/views/dca103onlineclasschapter7.ejs
+++ b/views/dca103onlineclasschapter7.ejs
@@ -144,6 +144,13 @@ processed document => Clipart
 12. Pictures can be group with shapes => True
 </p><p>
 13. Pictures can be deform/resize by ________ tool => Cropping
+</p><p>
+14. =rand(2,4) enter command automatically displays a set of => 2 Paragraphs and 4 sentences.
+</p><p>
+15. To select all of the boxes of an orgaization chart => All of the above <br>
+Right click the chart background and then click select all,
+Press and hold the Shift key and click each box,
+click edit and select all
 </p>
 
 											</div>
