--- a/views/dca103onlineclasschapter9.ejs
+++ b/views/dca103onlineclasschapter9.ejs
@@ -223,6 +223,21 @@ of the letter with place holders for the variable information => Mail merge
 6. Data source is by default saved in ________ => My documents
 </p><p>
 7. A data source is a document that has the ________ information => variable
+</p><p>
+8. A feature of MS Word that saves the document automatically after certain interval is available on Save tab on Options dialog box is called Auto Recover.
+</p><p>
+9. A ________ is a collection of predefined design elements and color schemes => Theme
+</p><p>
+10. Which of the following option is not available in Insert menu? => Graph <br>
+a) Chart b) Clipart c) WordArt e) Graph
+</p><p>
+11. You can merge the main document with data source in excel. In mail merge operation, word is usually => Client
+</p><p>
+12. What happen when you click on Insert > Clipart => It opens clipart task pane
+</p><p>
+13. Which of the following can be used to navigate documents? => Hyperlinks
+</p><p>
+14. Pressing F8 key for three times selects => A paragraph
 </p>
 
              
